feat: добавлены базовые категории для отладки